Archive2/f1/3999f6e7a1d3a7/output
+ g++-4.8 -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp:5:1: error: static assertion failed: yeah, right
 static_assert(boost::function_types::is_callable_builtin<foo>::value, "yeah, right");
 ^
